# mcp

mcp-client/: client.py  pyproject.toml
mcp-server/: README.md  pyproject.toml  server.py
projects/mcp-client/: .env.example  client.py  pyproject.toml
projects/weather/: pyproject.toml  weather.py
