[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.45.2",
    "google-generativeai>=0.8.4",
    "mcp[cli]>=1.2.1",
    "python-dotenv>=1.0.1",
]

[tool.uv.workspace]
members = ["mcp-server"]
